--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==0.13.0
+aiofiles==0.6.0
 alabaster==0.7.12
 anyconfig==0.10.1
 anyio==3.2.1
@@ -10,6 +11,7 @@ astunparse==1.6.3
 attrs==21.2.0
 Babel==2.9.1
 backcall==0.2.0
+beautifulsoup4==4.9.3
 binaryornot==0.4.4
 biopython==1.79
 black==21.5b1
@@ -19,6 +21,7 @@ botocore==1.20.105
 cachetools==4.2.2
 certifi==2021.5.30
 cffi==1.14.5
+cfgv==3.3.0
 chardet==4.0.0
 click==7.1.2
 click-plugins==1.1.1
@@ -31,12 +34,15 @@ cycler==0.10.0
 dask==2.30.0
 decorator==4.4.2
 defusedxml==0.7.1
+distlib==0.3.2
 distributed==2.30.1
 docopt==0.6.2
 docutils==0.16
 dynaconf==3.1.4
 entrypoints==0.3
 et-xmlfile==1.1.0
+fastapi==0.65.3
+filelock==3.0.12
 Fiona==1.8.20
 flake8==3.9.2
 flatbuffers==1.12
@@ -57,10 +63,12 @@ google-resumable-media==1.3.1
 googleapis-common-protos==1.53.0
 greenlet==1.1.0
 grpcio==1.34.1
+h11==0.12.0
 h5py==3.1.0
 hdfs==2.6.0
 HeapDict==1.0.1
 holoviews==1.13.5
+identify==2.2.10
 idna==2.10
 imagesize==1.2.0
 iniconfig==1.1.1
@@ -85,6 +93,7 @@ jupyterlab-server==2.6.0
 jupyterlab-widgets==1.0.0
 kedro==0.17.4
 kedro-telemetry==0.1.1
+kedro-viz==3.12.1
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
@@ -99,12 +108,14 @@ mistune==0.8.4
 msgpack==1.0.2
 munch==2.5.0
 mypy-extensions==0.4.3
+nba-stats @ file:///Users/thomas_littrell/projects/nbastats/src
 nbclassic==0.3.1
 nbconvert==5.6.1
 nbformat==4.4.0
 nbsphinx==0.8.1
 nbstripout==0.5.0
 networkx==2.5.1
+nodeenv==1.6.0
 notebook==6.4.0
 numexpr==2.7.3
 numpy==1.19.5
@@ -127,6 +138,7 @@ pip-tools==5.5.0
 plotly==4.14.3
 pluggy==0.13.1
 poyo==0.5.0
+pre-commit==2.13.0
 prometheus-client==0.11.0
 prompt-toolkit==3.0.19
 proto-plus==1.19.0
@@ -141,6 +153,7 @@ pyasn1-modules==0.2.8
 pycodestyle==2.7.0
 pycparser==2.20
 pyct==0.4.8
+pydantic==1.8.2
 pydata-google-auth==1.2.0
 pyflakes==2.3.1
 Pygments==2.9.0
@@ -168,6 +181,7 @@ requests-unixsocket==0.2.0
 retrying==1.3.3
 rsa==4.7.2
 s3fs==0.4.2
+semver==2.13.0
 Send2Trash==1.7.1
 Shapely==1.7.1
 six==1.15.0
@@ -175,6 +189,7 @@ smmap==4.0.0
 sniffio==1.2.0
 snowballstemmer==2.1.0
 sortedcontainers==2.4.0
+soupsieve==2.2.1
 Sphinx==3.4.3
 sphinx-autodoc-typehints==1.11.1
 sphinx-copybutton==0.3.1
@@ -186,6 +201,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 SQLAlchemy==1.4.20
+starlette==0.14.2
 tables==3.6.1
 tblib==1.7.0
 tensorboard==2.5.0
@@ -206,6 +222,8 @@ traitlets==5.0.5
 typing-extensions==3.7.4.3
 typing-inspect==0.7.1
 urllib3==1.26.6
+uvicorn==0.13.4
+virtualenv==20.4.7
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.1.0
