--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,4 @@
-name: testing
+name: Validation
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - master
 
 jobs:
-  testing:
+  run_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,19 +17,18 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.8"
-#      - name: Cache pip
-#        uses: actions/cache@v2
-#        with:
-#          # This path is specific to Ubuntu
-#          path: ~/.cache/pip
-#          # Look to see if there is a cache hit for the corresponding requirements file
-#          key: ${{ runner.os }}-pip-${{ hashFiles('src/requirements.txt') }}
-#          restore-keys: |
-#            ${{ runner.os }}-pip-
-#            ${{ runner.os }}-
+     - name: Cache pip
+       uses: actions/cache@v2
+       with:
+         # This path is specific to Ubuntu
+         path: ~/.cache/pip
+         # Look to see if there is a cache hit for the corresponding requirements file
+         key: ${{ runner.os }}-pip-${{ hashFiles('src/requirements.txt') }}
+         restore-keys: |
+           ${{ runner.os }}-pip-
+           ${{ runner.os }}-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r src/requirements.txt
       - name: Test with pytest
         run: |
