--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,4 +1,4 @@
-name: Validation
+name: testing
 
 on:
   push:
@@ -9,53 +9,29 @@ on:
       - master
 
 jobs:
-  run_tests:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
           python-version: "3.8"
-     - name: Cache pip
-       uses: actions/cache@v2
-       with:
-         # This path is specific to Ubuntu
-         path: ~/.cache/pip
-         # Look to see if there is a cache hit for the corresponding requirements file
-         key: ${{ runner.os }}-pip-${{ hashFiles('src/requirements.txt') }}
-         restore-keys: |
-           ${{ runner.os }}-pip-
-           ${{ runner.os }}-
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          # This path is specific to Ubuntu
+          path: ~/.cache/pip
+          # Look to see if there is a cache hit for the corresponding requirements file
+          key: ${{ runner.os }}-pip-${{ hashFiles('src/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+            ${{ runner.os }}-
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
           pip install -r src/requirements.txt
       - name: Test with pytest
         run: |
           pytest
-#  docs:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up Python ${{ matrix.python-version }}
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: "3.8"
-#      - name: Cache pip
-#        uses: actions/cache@v2
-#        with:
-#          # This path is specific to Ubuntu
-#          path: ~/.cache/pip
-#          # Look to see if there is a cache hit for the corresponding requirements file
-#          key: ${{ runner.os }}-pip-${{ hashFiles('src/requirements.txt') }}
-#          restore-keys: |
-#            ${{ runner.os }}-pip-
-#            ${{ runner.os }}-
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install flake8 pytest
-#          pip install -r src/requirements.txt
-#      - name: Build docs
-#        run: |
-#          kedro build-docs
