--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,10 +23,7 @@ jobs:
           # This path is specific to Ubuntu
           path: ~/.cache/pip
           # Look to see if there is a cache hit for the corresponding requirements file
-          key: ${{ runner.os }}-pip-${{ hashFiles('src/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-            ${{ runner.os }}-
+          key: ${{ runner.os }}-pip2-${{ hashFiles('src/requirements.txt') }}
       - name: Install dependencies
         run: |
           pip install -r src/requirements.txt
