--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,7 +29,8 @@ jobs:
             ${{ runner.os }}-
       - name: Install dependencies
         run: |
-          pip install --no-cache-dir -r src/requirements.txt
+          python -m pip install --upgrade pip
+          pip install -r src/requirements.txt
       - name: Test with pytest
         run: |
           pytest
