--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ~/src/requirements.txt
+          pip install -r ./src/requirements.txt
       - name: Test with pytest
         run: |
           pytest
