--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,9 +29,8 @@ jobs:
             ${{ runner.os }}-
       - name: Install dependencies
         run: |
-          pwd
-          ls -la
           python -m pip install --upgrade pip
+          python -m pip install kedro
           kedro install
       - name: Test with pytest
         run: |
