--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -31,7 +31,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install kedro
-          kedro install
+          cd src
+          python -m pip install -r requirements.txt
+          cd ..
       - name: Test with pytest
         run: |
           pytest
