--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -30,14 +30,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          ls -la
-          cd src
-          pwd
-          ls -la
-          python -m pip install -r requirements.txt
-          cd ..
-          pwd
-          ls -la
+          python -m pip install -r src/requirements.txt
       - name: Test with pytest
         run: |
           pytest
