--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,12 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+    -   id: requirements-txt-fixer
+    -   id: debug-statements
+    -   id: check-toml
+    -   id: check-case-conflict
+    -   id: check-builtin-literals
+    -   id: check-ast
 -   repo: https://github.com/pre-commit/mirrors-isort
     rev: 'v5.9.1'
     hooks:
