--- a/src/requirements.in
+++ b/src/requirements.in
@@ -107,3 +107,18 @@ virtualenv==20.4.7
 wcwidth==0.2.5
 xlrd==1.2.0
 XlsxWriter==1.4.4
+black==21.5b1
+flake8>=3.7.9, <4.0
+ipython~=7.0
+isort~=5.0
+jupyter~=1.0
+jupyter_client>=5.1, <7.0
+jupyterlab~=3.0
+kedro-telemetry~=0.1.0
+kedro-viz~=3.1
+nbstripout~=0.4
+pytest-cov~=2.5
+pytest-mock>=1.7.1, <2.0
+pytest~=6.2
+scikit-learn~=0.24
+wheel>=0.35, <0.37
