--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -77,6 +77,7 @@ pydantic==1.8.2
 pydata-google-auth==1.2.0
 Pygments==2.9.0
 pyparsing==2.4.7
+pytest==6.2.4
 python-dateutil==2.8.1
 python-json-logger==2.0.1
 python-slugify==5.0.2
