--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,4 +33,4 @@ jobs:
           python -m pip install -r src/requirements.txt
       - name: Test with pytest
         run: |
-          pytest
+          pytest src/tests/
